data added dynamically to the dom, styles added

--- a/exercise.html
+++ b/exercise.html
@@ -9,7 +9,11 @@
   <body>
 
     <!-- Content -->
-
+    <div id="statsContainer">
+      <div id="heading">Top ten most visited pages
+for gizmodo.com</div>
+      <div id="subheads"><span class="visits">visits</span><span class="title">title</span></div>
+    </div>
     <script src="cbUtils.js"></script>
     <script src="exercise.js"></script>
   </body>
