added toggle function to create and delete topRef div, updated styling

--- a/exercise.html
+++ b/exercise.html
@@ -11,8 +11,9 @@
     <!-- Content -->
     <div id="statsContainer">
       <div id="heading">Top ten most visited pages
-for gizmodo.com</div>
-      <div id="subheads"><span class="visits">visits</span><span class="title">title</span></div>
+on gizmodo.com</div>
+      <div class="subheads" ><span class="visits gray" >visits</span><span class="title gray">title</span></div>
+
     </div>
     <script src="cbUtils.js"></script>
     <script src="exercise.js"></script>
