added refferal functions

--- a/exercise.html
+++ b/exercise.html
@@ -10,9 +10,9 @@
 
     <!-- Content -->
     <div id="statsContainer">
-      <div id="heading">Top ten most visited pages
+      <div id="heading">Top 10 most visited pages
 on gizmodo.com</div>
-      <div class="subheads" ><span class="visits gray" >visits</span><span class="title gray">title</span></div>
+      <div class="subheads" ><span class="visits gray">visits</span><span class="title gray">title</span></div>
 
     </div>
     <script src="cbUtils.js"></script>
